--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,14 +8,14 @@
     <name>Demo</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="support@yourcompany.com" url="https://www.yourcompany.com">YourCompany</vendor>
+    <vendor email="1762977362@qq.com" url="https://www.yourcompany.com">Tongji</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
+    testtesttesttesttesttesttesttesttesttest<br>
+    <em>test test</em>
   ]]></description>
 
     <!-- Product and plugin compatibility requirements.
@@ -28,7 +28,7 @@
 
     </extensions>
     <actions>
-        <action id="InitTrace" class="tongji.demo.InitTrace" text="InitTrace" description="启动插件">
+        <action id="InitTrace" class="tongji.demo.InitTrace" text="InitTrace" description="Start">
             <add-to-group group-id="ToolsMenu" anchor="first"/>
         </action>
     </actions>
